# rtfm

./: .gitignore  main.py  pyproject.toml  test_chunks.json
agents/agents/: basemodel.py  chunk.py
agents/prompts/: chunk.py
agents/schema/: rag.py
alembic/: env.py
alembic/versions/: 2b73a67db488_chunks_table.py  c5d068dbecdb_init.py
app/: main.py
app/api/v1/: __init__.py  health.py  rag.py
app/core/: db.py  deps.py  logging.py  rag_config.py  settings.py
app/middleware/: logging.py
app/models/: __init__.py  chunks.py
app/schema/: rag.py
app/services/: scrape.py
app/services/db/: chunk.py
app/services/rag/: chunk.py  ingest.py  retrieve.py  scrape.py  utils.py
scripts/: generate_test_cases.py
